# SEDAS-AI-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.py  requirements.txt
src/: integrate.cpp  integrate.hpp  main.cpp  tasks.py  test.cpp
src/PlaneResponse/: classify.h  classify.hpp  process.h  process.hpp  source_check.h  speech_config.json  speech_models.py  speech_synth.h  speech_synth.hpp  text_config.json  text_models.py  voice_config.json  voice_models.py  voice_recog.h  voice_recog.hpp
src/PlaneResponse/config/: config_classify.json  config_recog.json  config_response.json  config_synth.json
src/SpeechSynthesis/: speech_models.py
src/VoiceRecognition/: main.py  voice_models.py
src/gen_map/: TODO.md
src/gen_map/train/: model.py
src/include/: keypress.hpp  record.h  record.hpp  socket_utils.hpp  source_check.h  source_check.hpp  utils.h  utils.hpp
test/: core_deploy.py  db_tester.py
